# cppcallback

./: LICENCE  README.md  callback.hpp  clojure.hpp  closure.hpp  delegate.hpp
test/: CMakeLists.txt  main.cpp  object.cpp  object.hpp  routines.cpp  routines.hpp
